# TSReader

./: .gitignore  CMakeLists.txt  README.md  ts_reader.sln  ts_reader.vcxproj  ts_reader.vcxproj.filters
inc/: ByteBufferView.hpp  Exception.h  Exception.hpp  FileReader.h  FileReader.hpp  FileWriter.h  FileWriter.hpp  PES_Data.h  PES_Data.hpp  PSI_Tables.h  PSI_Tables.hpp  Packet.h  Packet.hpp  PacketBuffer.h  PacketBuffer.hpp  PacketParser.h  PacketParser.hpp  PacketProcessor.h  PacketProcessor.hpp  Stats.h  Stats.hpp  StreamType.h  StreamType.hpp  Tables.h
samples/: elephantsLessThan188Bytes.ts
src/: FileReader.cpp  FileWriter.cpp  Main.cpp  PES_Data.cpp  PSI_Tables.cpp  Packet.cpp  PacketBuffer.cpp  PacketParser.cpp  PacketProcessor.cpp  Stats.cpp  StreamType.cpp  Tables.cpp
ts_reader_test/: ts_reader_test.vcxproj
ts_reader_test/src/: Main.cpp
